--- a/src/css/newbill.css
+++ b/src/css/newbill.css
@@ -22,6 +22,10 @@
   border-radius: 5px;
 }
 
+.error-border {
+  border: 2px solid #aa1717 !important;
+}
+
 label {
   font-style: normal;
   font-weight: 500;
